--- a/package.json
+++ b/package.json
@@ -3,9 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.7",
+    "apollo-client": "^2.0.4",
+    "apollo-client-preset": "^1.0.8",
+    "apollo-link-http": "^1.3.3",
+    "apollo-server-express": "^1.3.2",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "graphql": "^0.13.0",
+    "graphql-server-express": "^1.3.2",
+    "graphql-tag": "^2.7.3",
+    "graphql-tools": "^2.20.2",
+    "lodash": "^4.17.5",
+    "node-fetch": "^2.0.0",
     "react": "^16.2.0",
+    "react-apollo": "^1.4.15",
+    "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "react-scripts-ts": "2.13.0",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -14,10 +35,15 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/express": "^4.11.1",
+    "@types/graphql": "^0.12.3",
     "@types/jest": "^22.1.1",
+    "@types/lodash.flowright": "^3.5.3",
     "@types/node": "^9.4.2",
     "@types/react": "^16.0.36",
+    "@types/react-css-modules": "^4.6.0",
     "@types/react-dom": "^16.0.3",
+    "@types/react-router-dom": "^4.2.3",
     "typescript": "^2.7.1"
   }
 }
