--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-apollo": "^1.4.15",
     "react-css-modules": "^4.7.1",
     "react-dom": "^16.2.0",
+    "react-google-login": "^3.0.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
