--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/enzyme": "^3.1.8",
     "@types/express": "^4.11.1",
     "@types/graphql": "^0.12.3",
     "@types/jest": "^22.1.1",
@@ -45,6 +47,10 @@
     "@types/react-css-modules": "^4.6.0",
     "@types/react-dom": "^16.0.3",
     "@types/react-router-dom": "^4.2.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "react-addons-test-utils": "^15.6.2",
     "typescript": "^2.7.1"
   }
 }
